@@ -1,1 +1,0 @@
-This package provides the Adobe Acrobat Reader 7 plugin for the Opera package.
