@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.1947 2019/05/02 22:12:33 wiz Exp $
+$NetBSD: CHANGES-2019,v 1.1948 2019/05/02 22:13:27 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -3150,3 +3150,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Removed fonts/acroread9-jpnfont [wiz 2019-05-02]
 	Removed fonts/acroread9-korfont [wiz 2019-05-02]
 	Removed mail/amavis-perl [wiz 2019-05-02]
+	Removed www/opera-acroread7 [wiz 2019-05-02]
